<resources>
    <string name="app_name">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirmpassword">confirmpassword</string>
    <string name="confirmPassword">confirmpassword</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Registered">Registered?</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Already_Registered">Already Registered?</string>
    <string name="recipies">Recipies</string>
    <string name="FitPlan">fitplan</string>
    <string name="FitPlans">FitPlan</string>
    <string name="Profile">Profile</string>
    <string name="check_your_profile_here">Check Your Profile Here</string>
    <string name="View_Recipes_Here">View Recipes Here</string>
    <string name="Recepes">Recepes</string>
    <string name="Recipes">Recipes</string>
    <string name="Pedometer">Pedometer</string>
    <string name="calculate_your_walking_distance">Calculate Your Walking Distance</string>
    <string name="Logout">LogOut</string>
    <string name="Exit">Exit</string>
    <string name="fitplan">FitPlan</string>
    <string name="exit">Exit</string>
    <string name="sameer">Sameer</string>
    <string name="_1000">1000</string>
    <string name="_873">873</string>
    <string name="phone">Phone</string>
    <string name="_27123456789">+27123456789</string>
    <string name="sameermuhammad_gmail_com">sameermuhammad@gmail.com</string>
    <string name="email">Email</string>
    <string name="Steps">Steps</string>
    <string name="bmi">BMI</string>
    <string name="calculate_body_mass_index">Calculate Body Mass Index</string>
    <string name="showpassword">ShowPassword</string>


    <string name="tab_text_1">Breakfast</string>
    <string name="tab_text_2">Snack</string>
    <string name="tab_text_3">Lunch </string>
    <string name="tab_text_4">Dinner</string>
    <string name="mealplan">MealPlan</string>
    <string name="MealPlan">MealPlan</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="activity_level">Activity Level</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_am_sedentary">I am sedentary</string>
    <string name="moderately_active_3_5_days">Moderately active (3-5 days)</string>
    <string name="lightly_active_1_3_days">Lightly active (1-3 days)</string>
    <string name="very_active_6_7_days">Very active (6-7 days)</string>
    <string name="super_active_sports_job">Super active (sports job)</string>
    <string name="reset_values">Reset Values</string>
    <string name="maintenance_calories">Maintenance Calories =</string>
    <string name="calculate_your_basal_metabolic_rate">Calculate Your Basal Metabolic Rate</string>
    <string name="view_meal_plans_to_follow_a_proper_diet">View Meal Plans To Follow A Proper Diet</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string name="bmr">BMR</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="height_cm">Height (CM)</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="result">Result:</string>
    <string name="welcome">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="BMR">BMR =</string>
    <string name="bmr_calculator">BMR Calculator</string>

</resources>
