<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/footprints"
    android:gravity="center"
    tools:context=".Pedometer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pedometer"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_info"
        android:text="@string/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="40sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/pedoExit"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/Exit"
        android:clickable="true"
        android:textColor="#000000"
        android:focusable="true"
        android:background="@drawable/pedobutton"
        android:textSize="15sp"
        android:layout_marginTop="40dp"/>

</LinearLayout>