<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bglogin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="140dp"
        app:srcCompat="@drawable/logo1"/>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:hint="@string/Username"
        android:textColorHint="#4DFFFFFF"
        android:drawableLeft="@drawable/user"
        android:drawableStart="@drawable/user"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:hint="@string/Password"
        android:textColorHint="#4DFFFFFF"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <EditText
        android:id="@+id/editText_confirmPassword"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:hint="@string/ConfirmPassword"
        android:textColorHint="#4DFFFFFF"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Register"
        android:textColor="#B3FFFFFF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:textColor="#B3ffffff"
            android:text="@string/Already_Registered"/>

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/Login"
            android:paddingStart="6dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</LinearLayout>