<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bglogin">
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/logo1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FitPlans"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/Login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/login"
                    android:textColor="#B3ffffff"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"/>

                <Button
                    android:id="@+id/Register"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/Register"
                    android:textColor="#B3ffffff"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button"/>

                <Button
                    android:id="@+id/Exit"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/Exit"
                    android:textColor="#B3ffffff"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button"/>


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>